# agentic_problem_solver

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  aps.py  examples.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: examples.py
docs/explanation/: architecture.md
docs/howto/: common_tasks.md  extending_aps.md
docs/reference/: api.md  core_components.md
docs/tutorials/: getting_started.md  quickstart.md
src/: __main__.py  config.py  exceptions.py  messages.py  prompts.py  validation.py
src/agent/: __init__.py  base.py  solver.py  steps.py  types.py
src/agent/agent_types/: __init__.py  agent_types.py  enums.py
src/agent/state/: __init__.py  base.py
src/agents/: __init__.py  agent_config.py  base.py  solver_agent.py
src/cli/: __init__.py  main.py
src/common_types/: __init__.py  enums.py
src/config/: __init__.py  agent.py  base.py  constants.py  llm.py  utils.py
src/llm_providers/: __init__.py  base.py  factory.py  gemini.py  interface.py  lifecycle.py  selection.py  type_defs.py  version.py
src/llm_providers/config/: __init__.py  provider_config.py
src/llm_providers/providers/: __init__.py  base.py  gemini.py
src/llm_providers/utils/: factory.py
src/messages/: routing.py
src/utils/: log_config.py  log_utils.py  logging.py
tests/: conftest.py  test_messages.py  test_provider_lifecycle.py  test_provider_selection.py  verify_llm.py
tests/integration/: test_llm_integration.py
tests/unit/: test_llm_provider.py  test_solver_agent.py  test_validation.py
